--- a/FrontEnd_Angular/FrontEndAngular/src/app/app.component.html
+++ b/FrontEnd_Angular/FrontEndAngular/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-navbar></app-navbar>
+<app-navbar> </app-navbar>
 
-<app-sobrenos></app-sobrenos>
+ 
+
+<router-outlet> </router-outlet>
+
+<app-footer>
+</app-footer>
+
